// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="last_name"
      >
        Nazwisko
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Nazwisko"
          name="last_name"
          placeholder="Nazwisko"
          value="3232"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="testId"
  label="Nazwisko"
  name="last_name"
  placeholder="Nazwisko"
  value=""
/>
`;

exports[`<LastNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="last_name"
      >
        LastName*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="last_name"
      >
        LastName
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
